--- a/app/src/main/res/drawable/bg_circle.xml
+++ b/app/src/main/res/drawable/bg_circle.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="#EEEEEE" />
-</shape>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+    <!-- Simple Background Circle -->
+    <circle cx="24" cy="24" r="22" fill="#F8F8F8" stroke="#D0D0D0" stroke-width="1" />
+</svg>
