--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -46,7 +46,7 @@
         android:id="@+id/iv_add_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_circle"
+        android:background="@drawable/bg_circle_white"
         android:contentDescription="@string/add_photo"
         android:padding="8dp"
         android:src="@drawable/ic_add_photo"
