--- a/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_profile_tab.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-        <!-- If you use data binding variables, define them here -->
-    </data>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,7 +18,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/item_post" />
 
-        <!-- A simple empty layout with a text message -->
         <LinearLayout
             android:id="@+id/layoutEmpty"
             android:layout_width="match_parent"
