--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeFragment"
+        android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="@string/home" />
 
     <item
-        android:id="@+id/marketplaceFragment"
+        android:id="@+id/nav_marketplace"
         android:icon="@drawable/ic_marketplace"
-        android:title="Marketplace" />
+        android:title="@string/marketplace" />
 
     <item
         android:id="@+id/placeholder"
@@ -16,7 +16,7 @@
         android:enabled="false" />
 
     <item
-        android:id="@+id/profileFragment"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="@string/profile" />
 </menu>
